Fix: Ajusta os posicionamentos e espaçamento na home

--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,9 @@
 {
   "imports": {
     "deco-sites/superepi/": "./",
-
+    "deco-sites/storefront/": "./",
     "$store/": "./",
+    "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.22.11/",
     "deco/": "https://denopkg.com/deco-cx/deco@1.43.0/",
     "apps/": "https://denopkg.com/deco-cx/apps@0.16.1/",
     "$fresh/": "https://denopkg.com/deco-cx/fresh@1.4.4/",
