--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,8 @@
     "deco-sites/storefront/": "./",
     "$store/": "./",
     "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.22.11/",
-    "deco/": "https://denopkg.com/deco-cx/deco@1.42.0/",
-    "apps/": "https://denopkg.com/deco-cx/apps@0.16.1/",
+    "deco/": "https://denopkg.com/deco-cx/deco@1.48.0/",
+    "apps/": "https://denopkg.com/deco-cx/apps@0.25.2/",
     "$fresh/": "https://denopkg.com/deco-cx/fresh@1.4.4/",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
@@ -17,7 +17,7 @@
     "daisyui": "npm:daisyui@3.9.2"
   },
   "tasks": {
-    "start": "deno task bundle && deno run -A --unstable --watch=tailwind.css,sections/,functions/,loaders/,actions/,workflows/,accounts/,.env dev.ts",
+    "start": "deno task bundle && deno run -A --unstable --env --watch=tailwind.css,sections/,functions/,loaders/,actions/,workflows/,accounts/,.env dev.ts",
     "gen": "deno run -A dev.ts --gen-only",
     "play": "USE_LOCAL_STORAGE_ONLY=true deno task start",
     "component": "deno eval 'import \"deco/scripts/component.ts\"'",
