--- a/deno.json
+++ b/deno.json
@@ -4,11 +4,11 @@
     "deco-sites/storefront/": "./",
     "$store/": "./",
     "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.22.11/",
-    "deco/": "https://denopkg.com/deco-cx/deco@1.49.0/",
-    "apps/": "https://denopkg.com/deco-cx/apps@0.25.15/",
-    "$fresh/": "https://denopkg.com/deco-cx/fresh@1.4.4/",
-    "preact": "https://esm.sh/preact@10.15.1",
-    "preact/": "https://esm.sh/preact@10.15.1/",
+    "deco/": "https://denopkg.com/deco-cx/deco@1.51.3/",
+    "apps/": "https://denopkg.com/deco-cx/apps@0.27.13/",
+    "$fresh/": "https://deno.land/x/fresh@1.6.1/",
+    "preact": "https://esm.sh/preact@10.18.1",
+    "preact/": "https://esm.sh/preact@10.18.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
