--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,7 @@
     "$store/": "./",
     "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.22.11/",
     "deco/": "https://denopkg.com/deco-cx/deco@1.51.3/",
-    "apps/": "https://denopkg.com/deco-cx/apps@0.27.13/",
+    "apps/": "https://denopkg.com/lui-dias/apps@add-cache-product-list-linx/",
     "$fresh/": "https://deno.land/x/fresh@1.6.1/",
     "preact": "https://esm.sh/preact@10.18.1",
     "preact/": "https://esm.sh/preact@10.18.1/",
