--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "$store/": "./",
     "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.22.11/",
     "deco/": "https://denopkg.com/deco-cx/deco@1.52.11/",
-    "apps/": "https://denopkg.com/deco-cx/apps@0.32.8/",
+    "apps/": "https://denopkg.com/deco-cx/apps@a760d32/",
     "$fresh/": "https://deno.land/x/fresh@1.6.1/",
     "preact": "https://esm.sh/preact@10.18.1",
     "preact/": "https://esm.sh/preact@10.18.1/",
